@@ -5,6 +5,8 @@ use 5.022;
 use warnings;
 our $VERSION = '0.03';
 
+use List::Util qw(all);
+use List::MoreUtils qw(pairwise);
 use Keyword::Declare;
 use Moops;
 use PPR;
@@ -14,6 +16,29 @@ our $_RETURN_SENTINEL = \23;
 class ADT {
     has tag => (is => "ro", isa => Str);
     has values => (is => "ro", isa => ArrayRef);
+
+    sub _equality {
+        my ($type, $x, $y) = @_;
+
+        return 0 unless ref($x) && (ref($x) // '') eq (ref($y) // '');
+        return 0 unless $x->tag eq $y->tag;
+        return List::Util::all { $_ } List::MoreUtils::pairwise { $type eq '==' ? $a == $b : $a eq $b } @{$x->values}, @{$y->values};
+    }
+
+    sub _equality_num { return _equality('==', @_); }
+    sub _equality_str { return _equality('eq', @_); }
+
+    sub _stringify {
+        my $v = shift;
+        return $v->tag . "(" . join(", ", map { "$_" } @{ $v->values }) . ")";
+    }
+
+    use overload
+        '==' => sub { _equality('==', @_) },
+        '!=' => sub { ! _equality('==', @_) },
+        'eq' => sub { _equality('eq', @_) },
+        'ne' => sub { ! _equality('eq', @_) },
+        '""' => \&_stringify;
 }
 
 keytype ADTMatch is /
