@@ -1,6 +1,7 @@
 Revision history for Types-Algebraic
 
 {{$NEXT}}
+        - Implement equality and stringification operators.
         - Add provides section to CPAN meta.
 
 0.03  2020-07-07 20:26:01 CEST
